--- a/src/styles/sass/diagramm.scss
+++ b/src/styles/sass/diagramm.scss
@@ -98,6 +98,28 @@ $CELL_WIDTH: 40px;
           .cell {
             background: rgba(30, 136, 229, 0.5);
           }
+
+          .ctrl {
+            height: 100%;
+            width: 5px;
+            position: absolute;
+
+            &.left {
+              left: 0;
+            }
+            &.right {
+              right: 0;
+            }
+            &:hover {
+              cursor: e-resize;
+            }
+          }
+          & .resize {
+            border: 2px dashed black;
+            // width: 100%;
+            position: absolute;
+            height: 100%;
+          }
         }
       }
     }
