--- a/src/styles/sass/diagramm.scss
+++ b/src/styles/sass/diagramm.scss
@@ -119,6 +119,7 @@ $CELL_WIDTH: 40px;
             // width: 100%;
             position: absolute;
             height: 100%;
+            z-index: -1;
           }
         }
       }
