--- a/src/styles/sass/machinery.scss
+++ b/src/styles/sass/machinery.scss
@@ -14,12 +14,19 @@
     margin-bottom: 5px;
     margin-right: 5px;
 
-    .close {
-      cursor: pointer;
-      float: right;
-      font-size: 16px;
-      line-height: 32px;
-      padding-left: 8px;
+    span:last-child {
+      display: flex;
+
+      .productivity {
+        min-width: 5rem;
+      }
+      .close {
+        cursor: pointer;
+        float: right;
+        font-size: 16px;
+        line-height: 32px;
+        padding-left: 8px;
+      }
     }
   }
 }
